<resources>
    <string name="app_name">HInova Oficinas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_senha">Senha</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Logar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sem_validacao">Passar sem a validação</string>
    <string name="action_indique">Indique um Amigo</string>
    <string name="action_oficinas">Vejas as oficinas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informa_amigo">Informações do Amigo:</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="enviar">Enviar</string>
    <string name="listaOficinas">Oficinas:</string>
    <string name="examplo_oficina">Oficina Gecar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae cursus ex, sed molestie diam. Vestibulum dictum est vitae odio tincidunt auctor. Ut risus lorem, pellentesque sed tellus non, mattis aliquam ex. Curabitur porta et lectus non lacinia. Aliquam efficitur vulputate nibh, non gravida justo.</string>
    <string name="exemplo_endereco">Rua Ignês Maria, 326 - Betim Industrial</string>
    <string name="exemplo_email">contato@hinovamobile.com.br</string>
    <string name="exemplo_telefone">31–34193100</string>
</resources>