<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvNomeOficina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examplo_oficina"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <View
        android:id="@+id/vSeparadorOficina"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/cinza"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/tvNomeOficina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clConteudoOficina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/vSeparadorOficina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvDescricaoCompleta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/lorem_ipsum"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/ivExemploFotoOficina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/exemplo_imagem_oficina_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescricaoCompleta" />

        <TextView
            android:id="@+id/tvEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            tools:text="@string/exemplo_endereco"
            app:layout_constraintTop_toBottomOf="@id/ivExemploFotoOficina"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            tools:text="@string/exemplo_email"
            app:layout_constraintTop_toBottomOf="@id/tvEndereco"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            tools:text="@string/exemplo_telefone"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
